Adicionando no github

--- a/contato.html
+++ b/contato.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contato - Barbearia Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
+            <h1><img src="imagens/logo.png" alt="Logo da Barbearia Alura"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -97,7 +97,7 @@
 
 
     <footer>
-        <img src="logo-branco.png" alt="Logo Barbearia Alura">
+        <img src="imagens/logo-branco.png" alt="Logo Barbearia Alura">
         <p class="Copyright">&copy;Copyright Barbearia Alura - 2019</p>
     </footer>
 
