--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo.png" alt=""></h1>
+            <h1><img src="imagens/logo.png" alt=""></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,14 +25,14 @@
         </div>
     </header>
 
-    <img class="banner" src="banner.jpg" alt="">
+    <img class="banner" src="imagens/banner.jpg" alt="">
 
     <main>
     
         <section class="principal">
             <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-            <img class="utensilios" src="utensilios.jpg" alt="Utensilios">
+            <img class="utensilios" src="imagens/utensilios.jpg" alt="Utensilios">
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
                 para o
@@ -74,7 +74,7 @@
                     <li class="itens">Profissionais Qualificados</li>
                     <li class="itens">Pontualidade</li>
                     <li class="itens">Limpeza</li>
-                </ul><img class="imagem-beneficios" src="beneficios.jpg">
+                </ul><img class="imagem-beneficios" src="imagens/beneficios.jpg">
             </div>
             <div class="video">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0"
@@ -85,7 +85,7 @@
     </main>
 
     <footer>
-        <img src="logo-branco.png">
+        <img src="imagens/logo-branco.png">
         <p class="Copyright">&copy;Copyright Barbearia Alura - 2019</p>
     </footer>
 
