--- a/produtos.html
+++ b/produtos.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Produtos - Barbearia Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo.png" alt=""></h1>
+            <h1><img src="imagens/logo.png" alt=""></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -28,19 +28,19 @@
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
-                <img src="cabelo.jpg">
+                <img src="imagens/cabelo.jpg">
                 <p class="produto-descricao">Na tesoura ou máquina como o cliente preferir</p>
                 <p class="produto-preco">R$ 25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="barba.jpg">
+                <img src="imagens/barba.jpg">
                 <p class="produto-descricao">Corte e desenho profissional de barba</p>
                 <p class="produto-preco">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
-                <img src="cabelo+barba.jpg">
+                <img src="imagens/cabelo+barba.jpg">
                 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                 <p class="produto-preco">R$ 35,00</p>
             </li>
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <img src="logo-branco.png">
+        <img src="imagens/logo-branco.png">
         <p class="Copyright">&copy;Copyright Barbearia Alura - 2019</p>
     </footer>
 
